sampleSaver doesn't work yet, but FFT of a sine wave does
	modified:   dsp.js
	new file:   fft/README~
	modified:   fft/complex.js
	modified:   fft/fft.js
	modified:   fft/fftutil.js
	modified:   fft/ifft.js
	modified:   interface.css
	modified:   interface.html
	modified:   interface.js
	modified:   radiocontroller.js
	modified:   rtlcom.js
	new file:   sampleSaver.js
	modified:   waterfall.js

--- a/extension/interface.css
+++ b/extension/interface.css
@@ -105,13 +105,22 @@ option {
   position:absolute;
   top:30px;
   left:530px;
-  background-color: #109;
+  width: 600px;
+  height: 600px;
+  background-color: #10f;
 }
 
 
+.debugButton {
+  position: absolute;
+  top: 600px;
+  width: 10px;
+  height: 100px;
+}
 
 
 .waterfall {
+  position:absolute;
   width:512px;
   height:512px;
   background-color:black;
@@ -464,4 +473,8 @@ option {
   top: 25px;
   bottom: 0;
   width: 70px;
+}
+
+
+
 }
